Fix spacing and layout

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,10 +1,10 @@
 form {
   display: grid;
   gap: 1em;
-  max-width: 400px;
+  max-width: 500px;
   padding: 1.5em 1em;
-  margin: 1em;
-  background-color: rgb(244, 243, 243);
+  background-color: white;
   border-radius: 8px;
   letter-spacing: 1px;
+  font-size: 1.1rem;
 }
