--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -3,16 +3,17 @@ label {
   font-weight: 700;
   flex-direction: column;
   gap: 0.25em;
+  font-size: 1rem;
 }
 
 label input {
   padding: 8px 6px;
   appearance: none;
-  background-color: rgb(231, 231, 231);
+  background-color: rgb(241, 241, 241);
   outline: 1px solid rgb(231, 231, 231);
   border: none;
   border-radius: 4px;
-  font-size: 1rem;
+  font-size: 0.9rem;
   transition: outline 0.1s;
 }
 
